IPT_C_GPU/logs/sparse/H2O_k30/H2O_k30_auto_single_20260707_1335/latest_h2o_sto6g_fci_441_ipt_k30.log
===== H2O/STO-6G FCI k=30 automatic cluster IPT vs PRIMME =====
Tue Jul  7 13:35:36 CST 2026
gn36
SLURM_JOB_ID=3116345
CUDA_VISIBLE_DEVICES=0
BENCH_BIN=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/.codex_build/benchmark_h20_fci_primme_vs_ipt_cuda_3116345_2725072
RESULTS_DIR=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/results/sparse/H2O_k30/H2O_k30_auto_single_20260707_1335
LOG_DIR=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/logs/sparse/H2O_k30/H2O_k30_auto_single_20260707_1335
MATRIX_CACHE=/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/h2o_sto6g_fci_441_csc.bin
IPT_LOAD_MATRIX=1
IPT_SAVE_MATRIX=1
IPT_K=30
IPT_REPEATS=1
IPT_TOL=1e-12
IPT_MAXITER=200
IPT_DAVIDSON_CONVERGED_TOL=1e-12
IPT_DAVIDSON_RESTART_EVERY=0
IPT_DAVIDSON_FORCE_ACTIVE_PAIRS=<unset>
IPT_DAVIDSON_ACTIVE_CLUSTERS=<unset>
IPT_DAVIDSON_ACTIVE_TOL=<unset>
IPT_DAVIDSON_ACTIVE_MAX=<unset>
IPT_DAVIDSON_CORRECTION_MAX_PER_STEP=<unset>
PRIMME_MAX_MATVECS=200000
Currently Loaded Modulefiles:
 1) GCC/12.2.0   2) CUDA/12.2  
numpy 1.21.5 /fs1/software/hpcsystem/THL7/software/pyscf/2.0.1-py3.8/lib/python3.8/site-packages/numpy/__init__.py
scipy 1.7.3 /fs1/software/hpcsystem/THL7/software/pyscf/2.0.1-py3.8/lib/python3.8/site-packages/scipy/__init__.py
pyscf 2.0.1 /fs1/software/hpcsystem/THL7/software/pyscf/2.0.1-py3.8/lib/python3.8/site-packages/pyscf/__init__.py
nvcc: NVIDIA (R) Cuda compiler driver
Copyright (c) 2005-2023 NVIDIA Corporation
Built on Tue_Jun_13_19:16:58_PDT_2023
Cuda compilation tools, release 12.2, V12.2.91
Build cuda_12.2.r12.2/compiler.32965470_0
Tue Jul  7 13:36:16 2026       
+---------------------------------------------------------------------------------------+
| NVIDIA-SMI 535.104.12             Driver Version: 535.104.12   CUDA Version: 12.2     |
|-----------------------------------------+----------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |
|                                         |                      |               MIG M. |
|=========================================+======================+======================|
|   0  NVIDIA A100 80GB PCIe          Off | 00000000:CA:00.0 Off |                    0 |
| N/A   41C    P0              65W / 300W |      4MiB / 81920MiB |     25%      Default |
|                                         |                      |             Disabled |
+-----------------------------------------+----------------------+----------------------+
                                                                                         
+---------------------------------------------------------------------------------------+
| Processes:                                                                            |
|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |
|        ID   ID                                                             Usage      |
|=======================================================================================|
|  No running processes found                                                           |
+---------------------------------------------------------------------------------------+
===== build =====
+ nvcc -O3 -std=c++14 -lineinfo -gencode arch=compute_70,code=sm_70 -gencode arch=compute_80,code=sm_80 -I/fs1/home/nudt_liujie/ftt/primme-3.2.3/include -I/fs1/software/python/3.8_miniconda_4.10.3/include/python3.8 /fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/benchmark_h20_fci_primme_vs_ipt.cu /fs1/home/nudt_liujie/ftt/primme-3.2.3/lib/libprimme.a -o /fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/.codex_build/benchmark_h20_fci_primme_vs_ipt_cuda_3116345_2725072 -lcublas -lcusparse -lcusolver -lcudart -L/fs1/software/python/3.8_miniconda_4.10.3/lib -lpython3.8 -L/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O -lopenblas -lpthread -ldl -lutil -lrt -Xlinker -rpath -Xlinker /fs1/software/gcc/12.2.0/lib64 -Xlinker -rpath -Xlinker /fs1/software/python/3.8_miniconda_4.10.3/lib -Xlinker -rpath -Xlinker /fs1/software/cp2k/8.1-gcc8.4-openmpi/lib -lgfortran /fs1/software/gcc/12.2.0/lib64/libstdc++.so -lm
/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/benchmark_h20_fci_primme_vs_ipt.cu(792): error: identifier "env_bool" is undefined
      int load_matrix = env_bool("IPT_LOAD_MATRIX", 0);
                        ^

1 error detected in the compilation of "/fs1/home/nudt_liujie/ftt/IPT_C_GPU/test/sparse/H2O/benchmark_h20_fci_primme_vs_ipt.cu".
